--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
 	"name": "scipdf-node",
 	"version": "0.1.0",
 	"description": "node implementation of python scipdf_parser package",
+	"type": "commonjs",
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/exaggerated-dream/scipdf-node.git"
 	},
 	"scripts": {
 		"build": "tsc",
-		"test": "node --inspect --require ts-node/register src/test.ts"
+		"test": "node test.ts"
 	},
 	"author": "exaggerated-dream",
 	"license": "MIT",
