--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
 		"noImplicitAny": false,
 		"experimentalDecorators": true,
 		"emitDecoratorMetadata": true,
+		"module": "commonjs",
 		"outDir": "dist",
 		"rootDir": "src",
 		"strict": false,
